--- a/docs/components/players-overview.html
+++ b/docs/components/players-overview.html
@@ -72,4 +72,10 @@
         <img src="assets/graphs/stats_across_surfaces.jpeg" alt="Performance Metrics" class="w-3/5 object-contain mx-auto" />
       </div>
     </div>
+    <div id="countrymap-popup" class="hidden absolute bg-white shadow-lg rounded-lg p-4 border border-gray-300 z-50" style="min-width: 250px;">
+      <button id="countrymap-popup-close" class="absolute top-2 right-2 text-gray-500 hover:text-black text-lg font-bold h-auto w-auto leading-none p-1">&times;</button>
+      <h3 id="countrymap-popup-title" class="text-lg font-bold mb-2 pr-6"></h3>
+      <div id="countrymap-popup-table"></div>
+      <div class="countrymap-popup-arrow"></div>
+    </div>
   </div>
