--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -174,3 +174,32 @@ p {
   0%, 100% { transform: translateY(0) translateX(-50%); }
   50% { transform: translateY(-20px) translateX(-50%); }
 }
+
+/* ==== Players Overview ===== */
+
+.countrymap-popup-arrow {
+  position: absolute;
+  bottom: -10px; /* places it under the popup */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 10px solid white; /* match popup background */
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.countrymap-gridjs-container {
+  max-height: 300px;
+  overflow-y: auto !important;
+}
+
+.gridjs-table td:first-child,
+.gridjs-table th:first-child {
+  width: 35px;           /* shrink as much as possible */
+  white-space: nowrap;  /* prevent wrapping */
+  max-width: 35px;       /* limit max width */
+  overflow: hidden;     /* hide overflow */
+  text-overflow: ellipsis; /* add ellipsis if content is too long */
+}
