added the pages

--- a/docs/components/about.html
+++ b/docs/components/about.html
@@ -84,7 +84,7 @@
             </a>
         </div>
 
-        <!-- Fun tennis tips section -->
+        <!-- tennis tips section
         <div class="mt-16 bg-white rounded-2xl shadow-lg p-8 max-w-4xl mx-auto animate-fade-in">
             <h3 class="text-2xl font-bold text-center mb-6 text-tennis-dark">
                 <span class="gradient-text">Did You Know?</span>
@@ -108,14 +108,13 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     
-    <!-- Arrow to scroll down to player finder -->
-    <div class="flex justify-center mt-8 cursor-pointer" onclick="document.getElementById('players-overview').scrollIntoView({behavior: 'smooth'})">
-        <div class="arrow">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M12 17.414l-6.707-6.707 1.414-1.414L12 14.586l5.293-5.293 1.414 1.414z"/>
-            </svg>
-        </div>
+    <!-- scroll arrow to next section
+    <div class="arrow" onclick="document.getElementById('players-overview').scrollIntoView({behavior: 'smooth'})">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12 17.414l-6.707-6.707 1.414-1.414L12 14.586l5.293-5.293 1.414 1.414z"/>
+        </svg>
     </div>
-</div>
+</div> -->
+    
