--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -203,3 +203,12 @@ p {
   overflow: hidden;     /* hide overflow */
   text-overflow: ellipsis; /* add ellipsis if content is too long */
 }
+
+.gridjs-tbody .gridjs-td {
+  cursor: pointer;
+}
+
+.gridjs-tbody .gridjs-td:hover {
+  background-color: #f0f8ff;
+  transition: background-color 0.2s ease-in-out;
+}
