Fixed text in html

--- a/docs/components/players-overview.html
+++ b/docs/components/players-overview.html
@@ -2,7 +2,7 @@
     <!-- Header -->
     <header class="w-full py-8 bg-[var(--color-dark)] shadow-sm text-center relative">
       <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-white">Overview</h1>
-      <p class="text-lg text-center max-w-4xl mx-auto mb-8 text-white">Here you can compare global statistics about tennis players. Select for which players you want statistics in the dropdown below.</p>
+      <p class="text-lg text-center max-w-4xl mx-auto mb-8 text-white">Here you can compare global statistics about tennis players. The top100 players are based on the official WTA (women) or ATP (men) rankings on a given date.</p>
       <div class="mb-4 flex items-center gap-2 w-full justify-center">
         <label for="playersDropdown" class="text-white font-lg whitespace-nowrap">Statistics on:</label>
         <select id="playersDropdown" class="p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
