--- a/docs/components/about.html
+++ b/docs/components/about.html
@@ -78,7 +78,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold mb-2 text-tennis-dark">Stats</h3>
+                    <h3 class="text-xl font-bold mb-2 text-tennis-dark">Vocabulary</h3>
                     <p class="text-sm text-gray-600">Tennis statistics</p>
                 </div>
             </a>
