--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -57,7 +57,7 @@ body, html {
   overflow-y: scroll; */
 }
 
-button, input {
+button, input, select {
   font-family: var(--font-primary);
   font-weight: 400;
 }
