--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -60,6 +60,7 @@ body, html {
 button, input, select {
   font-family: var(--font-primary);
   font-weight: 400;
+  font-style: italic;
 }
 
 /* Remove default italic styling */
